# tree-enhanced-codebert

./: .gitignore  README.md  pyproject.toml
configs/: add-weighted.yaml  add.yaml  concat-deeper.yaml  concat.yaml  original.yaml
src/: eval_pretrained.py  finetune_clone_detection.py  parse_dataset.py  parse_dataset_clone_detection.py  train.py  tree_enhanced_codeberta.py  tree_enhanced_codeberta_clone_detector.py  tree_enhanced_codeberta_mlm.py  tree_enhanced_embeddings.py  utils.py
tests/: README.md  conftest.py  test_embeddings.py  test_models.py  test_parse_dataset.py  test_utils.py
